2007-08-06 [wwp]	2.10.0cvs92

	* src/plugins/pgpcore/plugin.def
		Apply one more chunk from gpg4win's 03-w32-port patch.

2007-08-05 [colin]	2.10.0cvs91

	* src/compose.c
	* src/compose.h
		reverting buggy patch for now

2007-08-05 [colin]	2.10.0cvs90

	* src/folder.c
		Fix slowdown

2007-08-04 [colin]	2.10.0cvs89

	* src/prefs_summaries.c
	* src/summary_search.c
		Replace deprecated widgets. Patch by
		Andrej.

2007-08-04 [colin]	2.10.0cvs88

	* src/mh.c
		Refresh GUI only every 2000 mails on mh_get_last_num
		This is fast (readdir) and done only once per 
		session/folder

2007-08-03 [colin]	2.10.0cvs87

	* src/prefs_account.c
	* src/gtk/combobox.h
	* src/gtk/gtkutils.c
		Fix a deprecated widget. Patch by
		Andrej

2007-08-03 [colin]	2.10.0cvs86

	* src/compose.c
	* src/compose.h
		Make colorisation and wrapping algorithms
		faster. Fixes bug 1246, 'compose becomes 
		increasingly slow replying to complex emails'

2007-08-03 [paul]	2.10.0cvs85

	* src/mh.c
		keep the window painted

2007-08-02 [paul]	2.10.0cvs84

	* src/folderview.c
	* src/mainwindow.c
	* src/mainwindow.h
		enable running folder Processing
		rules on demand

2007-08-02 [paul]	2.10.0cvs83

	* src/textview.c
		speed up/clean up rendering of larger
		msgs
		Thanks to Colin

2007-08-01 [paul]	2.10.0cvs82

	* src/mainwindow.h
		clean up cruft
	* src/toolbar.c
		change default toolbar layout on maemo
	* src/pixmaps/close.xpm
		make the red cross a grey cross
	* src/pixmaps/jpilot.xpm
		make icon smaller so it fits better

2007-07-31 [paul]	2.10.0cvs81

	* src/setup.c
	* src/gtk/gtkutils.c
		fix crash on maemo on first launch

2007-07-30 [paul]	2.10.0cvs80

	* src/prefs_matcher.c
		specify the units of age and size

2007-07-30 [paul]	2.10.0cvs79

	* src/main.c
		Fix IMAP timeout setting

2007-07-30 [colin]	2.10.0cvs78

	* src/prefs_account.c
		Fix a deprecated widget. Patch by
		Andrej

2007-07-27 [paul]	2.10.0cvs77

	* src/matcher_parser_parse.y
	* src/prefs_filtering_action.c
	* src/prefs_matcher.c